frontend/test/should_fail/alternative_004.grg
pattern patWithAlt
{
    alternative {
        one {
            a:Node;
        }
        two {
            a:Node -- b:Node;
        }
    }
}

// it should be necessary to specify the alternative case
rule instantiatePatternWithAlternative
{
    modify {
        p:patWithAlt();
    }
}
